--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/matrimony
+MONGO_URI=mongodb+srv://ashfaq:ashfaq@matrimony-app.qpcrw7m.mongodb.net/
 JWT_SECRET=your_very_secure_secret
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_REGION=your_aws_region (e.g. ap-south-1)
-AWS_S3_BUCKET=your_bucket_name
+AWS_ACCESS_KEY_ID=AKIAQWSSQSIWD47MOXEY
+AWS_SECRET_ACCESS_KEY=BeGybXRuXvAStPFVVZIPfMv04oMueWvEUcv6EOBy
+AWS_REGION=ap-south-1
+AWS_S3_BUCKET=matrimony-profile-bucket
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_email_password_or_app_password
 
