--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb+srv://ashfaq:ashfaq@matrimony-app.qpcrw7m.mongodb.net/
+MONGO_URI=mongodb+srv://ashfaq-matrimony:ashfaqmatrimony@matrimony-app.b7caknz.mongodb.net/
 JWT_SECRET=your_very_secure_secret
 AWS_ACCESS_KEY_ID=AKIAQWSSQSIWD47MOXEY
 AWS_SECRET_ACCESS_KEY=BeGybXRuXvAStPFVVZIPfMv04oMueWvEUcv6EOBy
